home-automation/homeassistant/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app: homeassistant
    app.kubernetes.io/name: homeassistant
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
        app.kubernetes.io/name: homeassistant 
    spec:
      hostNetwork: true 
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:2021.2.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
        - name: smb-server
          image: dperson/samba:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 139
              protocol: TCP
            - containerPort: 445
              protocol: TCP
          args:
            - -r
            - '-s "config;/config;yes;no;no;mattias"'
        - name: cron-borg
          image: ghcr.io/mattsve/borgmatic:0.5
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /data
            - name: backup-scripts
              mountPath: /config
            - name: ssh-secrets
              mountPath: /root/.ssh
              readOnly: true
          args:
            - cron
            - /config/crontab
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant
        - name: ssh-secrets
          secret:
            secretName: homeassistant
            items:
              - key: id_ed25519
                mode: 0600
                path: id_ed25519
              - key: id_ed25519.pub
                mode: 0644
                path: id_ed25519.pub
              - key: known_hosts
                mode: 0644
                path: known_hosts
        - name: backup-scripts
          configMap:
            name: homeassistant-backup
            items:
              - key: borg-backup.sh
                mode: 0755
                path: borg-backup.sh
              - key: crontab
                mode: 0644
                path: crontab
