home-automation/homeassistant/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-config
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ha-config.k3s.ingenstans.se.
    metallb.universe.tf/address-pool: default
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 139
      targetPort: 139
      name: netbios
    - protocol: TCP
      port: 445
      targetPort: 445
      name: smb
  type: LoadBalancer
