home-automation/homeassistant/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: homeassistant
            port:
              number: 8123
    host: ha.k3s.ingenstans.se
  tls:
    - hosts:
      - ha.k3s.ingenstans.se
      secretName: homeassistant-ingress-cert
